--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -21,7 +21,7 @@ body {
 .card {
   display: flex;
   width: 80%;
-  height: 500px;
+  height: 700px;
   overflow: hidden;
   position: absolute;
   top: 50%;
@@ -66,6 +66,7 @@ body {
 
 .logo {
   font-family: "Cookie", cursive;
+  font-size: 55px;
 }
 
 .left-bg {
@@ -75,7 +76,7 @@ body {
 .left-t {
   text-transform: uppercase;
   font-family: "Unica One", cursive;
-  font-size: 30px;
+  font-size: 40px;
   letter-spacing: 1px;
   margin-left: 10px;
   margin-top: 50px;
@@ -84,11 +85,11 @@ body {
 
 .left-bg p {
   margin-top: 50px;
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 300;
   padding: 0px 20px 0px 10px;
-  line-height: 15px;
-  letter-spacing: 1px;
+  line-height: 22px;
+  letter-spacing: 2px;
   position: relative;
 }
 .watch {
@@ -124,7 +125,130 @@ body {
   margin-left: 40px;
   margin-right: 40px;
 }
+
+.left-social ul li {
+  margin-right: 25px;
+}
 .right {
   width: 85%;
   padding: 20px;
+}
+
+.right-nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  font-family: "Unica One", cursive;
+}
+
+.right-nav ul {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  margin-left: 20px;
+  list-style-type: none;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.right-nav a {
+  text-decoration: none;
+  border: 2px solid var(--color);
+  font-weight: bold;
+  font-size: 20px;
+  color: black;
+  padding: 5px;
+  margin-top: -7px;
+  transition: all 0.3s linear;
+}
+
+.right-nav a:hover {
+  background: var(--color);
+  color: white;
+}
+
+.title {
+  font-family: "Unica One", cursive;
+  padding-top: 30px;
+  margin-bottom: 30px;
+  font-size: 40px;
+  color: var(--color);
+}
+
+.right-bg h4 {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.right-bg p {
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  color: #555;
+}
+
+button.learn {
+  background: var(--color);
+  border: 0;
+  outline: none;
+  color: #fff;
+  padding: 10px 50px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 7px 0px rgba(55, 66, 250, 0.6);
+  font-family: "Roboto", sans-serif;
+  margin: 35px 5px;
+  cursor: pointer;
+}
+
+.right-footer {
+  display: flex;
+  margin-top: 5%;
+}
+
+.right-footer ul {
+  display: flex;
+  list-style: none;
+  margin-left: 20px;
+}
+
+.right-footer ul li {
+  margin-right: 20px;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.right-footer p {
+  font-weight: bold;
+  padding-top: 10px;
+  margin-right: 10px;
+  width: 350px;
+}
+
+.line {
+  width: 3px;
+  height: 200px;
+  background: red;
+  margin: 0 20px;
+}
+
+.next {
+  background: var(--color);
+  color: white;
+  padding: 12px 9px;
+  border-radius: 50%;
+  outline: none;
+  box-shadow: 0px 2px 7px 0px rgba(56, 66, 250, 0.6);
+  border: 0;
+  position: absolute;
+  right: 30px;
+  bottom: 155px;
+  width: 40px;
+}
+
+.next i {
+  font-size: 20px;
 }
